# HoudiniHDKTools

./: CMakeLists.txt  LICENSE  README.md  makestandalone.sh
config/: HoudiniHDKTools.json.in
help/nodes/sop/: hdk_flatten.txt
src/: CMakeLists.txt
src/SOP/: CMakeLists.txt  SOP_Flatten.C  SOP_Flatten.h  SOP_PolyClip.C  SOP_PolyClip.h  SOP_Star.C  SOP_Star.h
src/standalone/: geoisosurface.c
